Version 4.16 -        2011, by Per Øyvind Karlsen

- support versioned suggests

Version 4.15 - 19 Feb 2011, by Per Øyvind Karlsen

- fix segfault when there's no provides in synthesis (ie. with src.rpm)

Version 4.14 - 14 Feb 2011, by Per Øyvind Karlsen

- use specified arch for packages to be removed, don't strip it away and
  remove every package if having multiple packages with same name and
  different arch
- fix segfault when trying to open non-existing synthesis

Version 4.13 - 24 Jan 2011, by Per Øyvind Karlsen

- move disttag/distepoch pattern matching breakage hack into rpm
- fix fetching EVR from rpm headers
- fix evr extraction which broke for some packages with i586 synthesis
- fix parsing of disttag from synthesis
- add regression tests for tags extracted from synthesis & rpmdb

Version 4.12 - 23 Jan 2011, by Per Øyvind Karlsen

- order of %PROVIDEVERSION isn't always the same for all rpm versions synthesis
  is generated with, so locate it based on name, rather than hardcoding
  location assumption
- enable automatic Berkeley DB log removal for URPM::DB::open() by default (#62271)

Version 4.11 - 22 Jan 2011, by Per Øyvind Karlsen

- fix URPM::Resolve::*_overlap() for packages having disttag
- look for EVR of package at the first element of @provides@ rather than the last
- replace incorrect usage of URPM::rpmvercmp on NVRA with rpmEVRcompare in
  URPM::Resolve::provided_version_that_overlaps() &
  URPM::Resolve::_find_required_package__sort()

Version 4.10 - 21 Jan 2011, by Per Øyvind Karlsen

- fix distepoch detection breakage with proper synthesis

Version 4.9 - 21 Jan 2011, by Per Øyvind Karlsen

- make URPM::Package::get_tag() handle NVRA tag for synthesis (fixing
  regression in previous version)

Version 4.8 - 21 Jan 2011, by Per Øyvind Karlsen

- fix a bug causing segfault when trying open a non-existing segfault which
  for some reaallly odd reason didn't get triggered before now