@@ -1,5 +1,6 @@
 Version 4.16 -        2011, by Per Øyvind Karlsen
 
+- support translate_message and raw_message options for URPM::Transaction->check()
 - support versioned suggests
 
 Version 4.15 - 19 Feb 2011, by Per Øyvind Karlsen
